Devel::Cover history

{{$NEXT}}
 - Untaint $DEVEL_COVER_OPTIONS (Alexey Sokolov) (github 187).

Release 1.25 - 11 May 2017
 - Fix C code to work with MSVC (Marc-Philip) (github 177).
 - Fix cover command using Module::Build on Win32 (sago35) (github 160).
 - Add file and line info to keep ops unique (Niko Tyni) (github 143).
 - Report coverage for all declarations (Heinz Knutzen) (github 166).
 - Fix spelling mistakes (Gregor Herrmann) (github 171).
 - Fix condition coverage for complex conditions (Heinz Knutzen) (github 165).
 - Use JSON::MaybeXS for sppen and flexibility (Olivier Mengué) (github 139).
 - Add CONTRIBUTING file (Gabor Szabó) (github 100).

Release 1.24 - 18 April 2017
 - Work with 5.25.x (op_sibling) (Dan Collins, Matthew Horsfall) (github 162).
 - Perl versions below 5.10.0 are now unsupported.

Release 1.23 - 24 April 2016
 - Enhance html coverage popups (Haydn Newport) (github 156).
 - Add cpancover about page (Guillermo O. Freschi) (github 146).
 - Perl versions below 5.8.1 are now unsupported.

Release 1.22 - 9 April 2016
 - Test against 5.20.3, 5.23.1 - 5.23.9, 5.22.1.
 - Improve uncoverable docs (Alex Balhatchet) (github 148).
 - Improve cpancover.

Release 1.21 - 20 September 2015
 - Test more versions on travis.
 - Fix things up with cpancover for new docker release.
 - Fix problem under 5.22 (Dick Franks) (github 140).

Release 1.20 - 6 July 2015
 - Document setting PerlSwitches for mod_perl (jpsalvesen) (github 128).

Release 1.19 - 5 July 2015
 - Get things working with 5.22.0.
 - Test against 5.23.0.
 - Remove dependency on Test::Warn.

Release 1.18 - 6 April 2015
 - Remove dependency on CGI (use HTML::Entities instead) (Lee Johnson).
 - Fix a use of the wrong type of null constant (Zefram) (RT #103102).
 - Link to next uncovered statement in html_basic (H.Merijn Brand) (github 112).
 - Add "provides" to metadata (Ivan Wills) (github 119).

Release 1.17 - 20 September 2014
 - Get cpancover to release quality.
 - Add IRC link to META.