@@ -95,6 +95,7 @@ Steve Peters                   smpeters@cpan.org
 Steve Sanbeg                   sanbeg@cpan.org
 Tatsuhiko Miyagawa             miyagawa@bulknews.net
 Thomas Dorner                  dorner (AT) cpan.org
+Todd Rinaldo                   toddr@cpan.org
 Vadim O. Ustiansky             ustiansky@cpan.org
 Xavier Caron                   xcaron@gmail.com
 Zefram                         zefram@fysh.org
