@@ -2,6 +2,7 @@ Devel::Cover history
 
 {{$NEXT}}
  - Untaint $DEVEL_COVER_OPTIONS (Alexey Sokolov) (github 187).
+ - Add loose_perms option (Todd Rinaldo) (github 185).
 
 Release 1.25 - 11 May 2017
  - Fix C code to work with MSVC (Marc-Philip) (github 177).
